# polar-data-analyser

./: .gitignore  main.py  pyproject.toml
notebooks/: eda.ipynb
src/polar/: __init__.py  data_loader.py  flow_client.py  organize_downloads.py  utils.py
