[project]
authors         = [{ name = "Andres Ingelmo", email = "aingelmo@gmail.com" }]
dependencies    = [
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
]
description     = "Polar Flow data downloader"
name            = "polar"
readme          = "README.md"
requires-python = ">=3.13"
version         = "0.1.0"

[tool.uv]
# Add uv-specific settings here if needed
